# RAG_Document_Assistant

./: .gitignore  README.md  debug_add.py  debug_chroma.py  debug_faiss.py  debug_rag.py  debug_retriever.py  debug_store.py  pyproject.toml  streamlit_app.py  test.txt  test_embedding.py
app/: config.py  main.py
app/prompts/: rag_prompt.py
app/routers/: chat.py  upload.py
app/schemas/: chat.py
app/services/: embeddings.py  llm.py  loader.py  rag_chain.py  retriever.py  splitter.py  vectorstore.py
