[project]
name = "rag-document-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "docx2txt>=0.9",
    "faiss-cpu>=1.11.0",
    "fastapi>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-text-splitters>=1.1.2",
    "markdown>=3.10.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "streamlit>=1.59.0",
    "unstructured>=0.23.1",
    "uvicorn>=0.49.0",
]
